--- a/index.css
+++ b/index.css
@@ -19,6 +19,7 @@ nav{
 }
 nav img{
     width: 120px;
+    margin-top: 30px;
 
 }
 .nav-links{
@@ -144,6 +145,7 @@ h3{
 }
 .loc-col img{
     width: 100%;
+    height: 100%;
 }
 .layer{
     background: transparent;
